intergrated create song and create artist apis

--- a/src/component/StarRating/StarRating.css
+++ b/src/component/StarRating/StarRating.css
@@ -1,10 +1,13 @@
 .star-rating {
-    display: inline-block;
+    display: flex;
+    gap: 2rem;
   }
   
   .star {
     font-size: 24px;
     color: #ddd;
+    width: 2rem;
+    height: 2rem;
   }
   
   .filled {
