--- a/src/component/NewWindowContent/NewWindowContent.css
+++ b/src/component/NewWindowContent/NewWindowContent.css
@@ -2,8 +2,22 @@
     height: 55rem;
     width: 80rem;
     border: 1px solid rgb(79, 78, 78);
-    margin-top: 5rem;
-    margin-left: 20rem;
+    /* margin-top: 5rem;
+    margin-left: 20rem; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+
+.blurr-container{
+    position:fixed;
+    background-color: rgba(189,189, 189, 0.9);
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 
 #headerdiv{
